--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -110,7 +110,7 @@ div.side-image {
 img.book-image {
   margin: 0 20px 10px 0;
   border: 4px solid #fff;
-  box-shadow: 4px 4px #bbb;
+  box-shadow: 10px 10px 5px #bbb;
 }
 div.side-image img {
   height: 200px; width: 200px;
