updated the file to new template

--- a/css/master.css
+++ b/css/master.css
@@ -530,6 +530,14 @@ h4 {
 	float: right;
 }
 
+ /* PAGE
+------------------------------------------------------------- */
+
+.page {
+	padding: 50px 50px 30px;
+	background: url(../img/bg-noise.png) repeat;
+}
+
 
 /* FOOTER
 ------------------------------------------------------------- */
