--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
 
     <!-- FOOTER -->
     <div class="footer group">
-      <p>&copy; 2012 Roma Sharma | <a href="/privacy">Privacy Statement</a> | <a href="/terms">Terms</a></p>
+      <p>&copy; 2012 Roma Sharma</p>
       <p class="last"><a href="http://romasharma.com">blog</a> | <a href="/contact">Contact</a> | <a href="http://eepurl.com/k1YV1">Subscribe</a></p>
     </div><!-- /footer -->
 
