--- a/_includes/fb_comments.html
+++ b/_includes/fb_comments.html
@@ -8,7 +8,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-
-<div class="fb-comments" style="margin-left: 70px" data-href="http://babyfoodrecipes.in" data-num-posts="10" data-width="470"></div>
+<h3>Share your comments</h3>
+<div class="fb-comments" data-href="http://babyfoodrecipes.in" data-num-posts="10" data-width="470"></div>
 
 </div>
