--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,15 @@
 
     <title>{% if page.title %}{{ page.title }} | {% endif %}60 Great Baby Food Recipes - Book by Roma Sharma!</title>
 
+    <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
+    <meta http-equiv="content-language" content="en-us">
+    <meta name="robots" content="all" />
+    <meta name="title" content="{% if page.title %}{{ page.title }}, {% endif %}60 Great Baby Food Recipes - Book by Roma Sharma!">
+    <meta name="copyright" content="romasharma.com">
+    <meta name="author" content="Roma Sharma">
+    <meta name="description" content="60 Great baby food recipes for your toddler when you don't know what they like and are struggling to make something that they can eat and is also nutritious.">
+    <meta name="keywords" content="baby food recipes, baby food cookbook, vegetarian recipes, indian recipes, food for toddlers, food for kids, parenting, travel food for babies, home remedies, weaning off the baby"/>
+
     <!--[if !IE 6]><!--> 
     <link rel="stylesheet" href="/css/master.css" /> 
     <link rel="stylesheet" href="/js/fancybox/jquery.fancybox-1.3.4.css" />
@@ -26,7 +35,7 @@
     <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE8.js" type="text/javascript"></script>
     <![endif]-->
 
-    <link rel="alternate" type="application/atom+xml" title="Baby Food Recipes Feed" href="http://babyfoodrecipes.in/feed.xml" />
+    <link rel="alternate" type="application/atom+xml" title="Baby Food Recipes Feed" href="http://babyfoodrecipes.in/sitemap.xml" />
 
     <!--
     <link rel="apple-touch-icon" href="/images/iOS-114.png" />
