added google plus link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,9 +65,11 @@
         </form>
 
         <ul class="social">
+          <!-- Place this tag where you want the badge to render -->
           <li><a href="http://www.facebook.com/babyfoodrecipes" class="fb">Facebook</a></li>
           <li><a href="http://twitter.com/romasharma" class="twit">Twitter</a></li>
           <li><a href="http://www.linkedin.com/in/romasharma" class="lin">LinkedIn</a></li>
+          <li><a href="https://plus.google.com/103018623153251025399?prsrc=3" rel="publisher" style="background: none;text-decoration: none;text-indent: 0;"><img src="https://ssl.gstatic.com/images/icons/gplus-16.png" alt="" style="border:0;width:16px;height:16px;"/></a></li>
         </ul>
 
       </div><!-- /header -->
