--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,7 +81,7 @@
     <!-- FOOTER -->
     <div class="footer group">
       <p>&copy; 2012 Roma Sharma</p>
-      <p class="last"><a href="http://romasharma.com">blog</a> | <a href="/contact">Contact</a> | <a href="http://eepurl.com/k1YV1">Subscribe</a></p>
+      <p class="last"><a href="http://romasharma.com">Blog</a> | <a href="/contact">Contact</a> | <a href="http://eepurl.com/k1YV1">Subscribe</a></p>
     </div><!-- /footer -->
 
 
