added tracking links

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -47,10 +47,10 @@
      <div class="content">
        <div class="sidebar">
          <h1>Buy my book!</h1> 
-          <a href="http://bit.ly/1b4JhAC"><img src="/img/roma/book_cover_scaled.JPG" alt="book for sale"></a>
-          <a href="http://bit.ly/1b4JhAC"><h2>60 great baby food recipes</h2></a>
+          <a href="http://www.flipkart.com/60-great-baby-food-recipes-nutritious-vegetarian-your/p/itmdpy4xvfswh6xr?affid=INMayank"><img src="/img/roma/book_cover_scaled.JPG" alt="book for sale"></a>
+          <a href="http://www.flipkart.com/60-great-baby-food-recipes-nutritious-vegetarian-your/p/itmdpy4xvfswh6xr?affid=INMayank"><h2>60 great baby food recipes</h2></a>
           <h2>Available on ...</h2>
-          <a href="http://bit.ly/1b4JhAC"><img src="/img/roma/flipkart-Logo_scaled.jpg" alt="flipkart"></a>
+          <a href="http://www.flipkart.com/60-great-baby-food-recipes-nutritious-vegetarian-your/p/itmdpy4xvfswh6xr?affid=INMayank"><img src="/img/roma/flipkart-Logo_scaled.jpg" alt="flipkart"></a>
            
           <ul>
           <li><a href="/category/baby-food-recipes" class="{% if page.category_nav == 'baby-food-recipes'%}active_cat{%endif%}"><h2>Baby Food</h2></a></li>
@@ -76,5 +76,19 @@
      <h1>visit me | <a href="http://romasharma.com">romasharma.com</a></h1>
    </div> <!-- footer -->
 
+   <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-8744648-12']);
+      _gaq.push(['_setDomainName', 'babyfoodrecipes.in']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+       })();
+
+     </script>
 </body>
 </html>
