--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -74,6 +74,8 @@
    </div> <!-- container -->
    <div class="footer">
      <h1>visit me | <a href="http://romasharma.com">romasharma.com</a></h1>
+       <a href="https://www.facebook.com/babyfoodrecipes"> <img class="icons" src="/img/roma/facebook-icon.jpg" alt="facebook"> </a>
+       <a href="https://twitter.com/romasharma"> <img class="icons" src="/img/roma/twitter-icon.jpg" alt="twitter"> </a>
    </div> <!-- footer -->
 
    <script type="text/javascript">
