added new category

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -60,6 +60,7 @@
             <li><a href="/category/10-12-months" class="{% if page.category_nav == '10-12-months'%}active_cat{%endif%}"><h2>10-12 months</h2></a> </li>
             <li><a href="/category/above-12-months" class="{% if page.category_nav == 'above-12-months'%}active_cat{%endif%}"><h2>above 12 months</h2></a></li>  
             <li><a href="/category/home-remedies" class="{% if page.category_nav == 'home-remedies'%}active_cat{%endif%}"><h2>Home Remedies</h2></a></li>              
+            <li><a href="/category/awareness" class="{% if page.category_nav == 'awareness'%}active_cat{%endif%}"><h2>Awareness</h2></a></li>  
            </ul>
          <!-- <li><h2>Baby Care</h2></li>  -->
           </ul>
