--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -47,10 +47,10 @@
      <div class="content">
        <div class="sidebar">
          <h1>Buy my book!</h1> 
-          <a href="goo.gl/gKCPBE"><img src="/img/roma/book_cover_scaled.JPG" alt="book for sale"></a>
-          <a href="goo.gl/gKCPBE"><h2>60 great baby food recipes</h2></a>
+          <a href="http://goo.gl/gKCPBE"><img src="/img/roma/book_cover_scaled.JPG" alt="book for sale"></a>
+          <a href="http://goo.gl/gKCPBE"><h2>60 great baby food recipes</h2></a>
           <h2>Available on ...</h2>
-          <a href="goo.gl/gKCPBE"><img src="/img/roma/flipkart-Logo_scaled.jpg" alt="flipkart"></a>
+          <a href="http://goo.gl/gKCPBE"><img src="/img/roma/flipkart-Logo_scaled.jpg" alt="flipkart"></a>
            
           <ul>
           <li><a href="/category/baby-food-recipes" class="{% if page.category_nav == 'baby-food-recipes'%}active_cat{%endif%}"><h2>Baby Food</h2></a></li>
